macros/tests/invalid/too_small.stderr
error: proc macro panicked
 --> tests/invalid/too_small.rs:4:13
  |
4 |     let _ = dec!(-79_228_162_514_264_337_593_543_950_336);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Number less than minimum value that can be represented.
